<resources>
    <string name="app_name">MSc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msc_home_overview">
        "The MSc(CompSc) programme is a comprehensive postgraduate study programme provides advanced and in-depth learning in Computer Science. The programme is credit unit based, with courses of both applied and fundamental nature. Students can choose from a comprehensive and diversified study in Computer Science courses or focussed streams of study. Focussed streams of study represent a cohesive collection of related courses that provides both fundamental and in-depth exposure to students in a given ICT domain."
    </string>
    <string name="msc_home_schedule">
        "The MSc(CompSc) programme is offered in both part-time and full-time mode.\n\n"

        "There are 3 semesters in an academic year. The curriculum in full-time mode shall take a minimum of 4 semesters of study. For the part-time mode, the curriculum shall normally take eight semesters of study.\n\n"

        "Classes are usually conducted in weekday evenings from 7:00 p.m., or during weekends. Some courses will only be offered mainly for full-time students in weekday daytime."
    </string>
    <string name="msc_home_fee">
        "The composition fee for each 6-credit course in MSc(CompSc) curriculum is HK$11,000*. The dissertation, which is equivalent to 24 credits, has a composition fee of HK$44,000*. The total composition fees are therefore as follows:\n\n"

        "48 credit-units (8 courses) + dissertation:\n\n"

        "(HK$11,000* x 8) + (HK$44,000*) = HK$132,000*"
    </string>
    <string name="msc_about_faculty">
        "The Department of Computer Science is committed to high-quality education and training of computing professionals at both the undergraduate and postgraduate levels. At the postgraduate level, we offer two taught programmes based on coursework, the MSc(CompSc) and the MSc(ECom&amp;IComp), as well as the research-based MPhil and PhD programmes.\n\n"

        "The academic staff is active in research and development in a variety of areas including databases, parallel and distributed computing, computer networks, computer graphics, algorithms and complexity, computer vision, multimedia, software engineering, statistical computing, information security and computer forensics, and legal aspects of computing. Some of our research results have been applied to the development of real software and systems. You will have these researchers as your inspiring teachers of the courses in this programme. Here are some of them."
    </string>
    <string name="programme_overview">
        "The MSc(CompSc) programme is a comprehensive postgraduate study programme provides advanced and in-depth learning in Computer Science.  The programme is credit unit based, with courses of both applied and fundamental nature.\n\n"

        "Students can choose focussed streams of study or a comprehensive and diversified study in Computer Science, i.e. the General Stream.\n\n"

        "Focussed streams of study represent a cohesive collection of related courses that provides both fundamental and in-depth exposure to students in a given ICT domain.  Students can extend and deepen their knowledge in the specialization streams in Cyber Security, Multimedia Computing and Financial Computing."
    </string>
    <string name="pattern_of_study">
        "Students are required to complete 72 credits, of which 48 credits from courses (equivalent to eight 6-credit courses) plus a dissertation (equivalent to 24 credits). "
    </string>
    <string name="selection_of_courses">
        "Students of Cyber Security, Multimedia Computing, or Financial Computing Stream are required to select a minimum of 24 credits of stream specific courses (equivalent to four 6-credit courses) in the corresponding subject group, and undertake a dissertation in the area of the corresponding stream.\n\n"

        "For General Stream, students can choose 48 credits of courses (equivalent to eight 6-credit courses) from any stream and subject group in the curriculum, and undertake a dissertation in any area in computer science.\n\n"

        "In addition to the list of MSc(CompSc) courses for students to choose from, students may select no more than 12 credits of courses (equivalent to two 6-credit courses) from the syllabuses for the degrees of MSc(ECom&amp;IComp) and MSc(Eng), subject to the approval of the Head of the Department of Computer Science.  Details of courses from MSc(ECom&amp;IComp) can be found in this website: https://www.ecom-icom.hku.hk."
    </string>
    <string name="capstone_experience_dissertations">
        "The capstone experience will definitely be beneficial for students to put together what they have learnt in the programme and demonstrate a deeper understanding of the knowledge they have acquired. Students are required to complete a dissertation (24 credits) and attend some supplementary workshops. The dissertation would represent students’ consolidated capstone experience in their study."
    </string>
    <string name="duration_of_study">
        "The MSc(CompSc) programme is offered in both full-time and part-time modes. \n\n"

        "There are 3 semesters in an academic year, i.e. semester 1: September – December, semester 2: January – May and the summer semester: June – August.\n\n"

        "The curriculum in full-time mode shall take a minimum of 4 semesters of study (i.e. from September 2019 to December 2020).  The maximum period of study is two years.\n\n"

        "For the part-time mode, the curriculum shall normally take eight semesters of study, and the maximum period of study is three years."
    </string>
    <string name="class_schedule">
        "Classes are usually conducted in weekday evenings from 7:00 p.m., or during weekends.  Some courses will be offered mainly for full-time students in weekday daytime."
    </string>
    <string name="Composition_Fees">
        "The composition fee for each 6 credit-units in MSc(CompSc) is HK$13,000*.  The dissertation, which is equivalent to 24 credits, has a composition fee of HK$52,000*.  The total composition fees are therefore as follows:\n\n"

        "   48 credit-units (8 courses) + dissertation:"
        "   (HK$13,000* x 8) + (HK$52,000*) = HK$156,000* \n\n"

        "Students who select to study a course from the MSc(ECom&amp;IComp) and MSc(Eng) programmes have to pay HK$13,000* and HK$12,000* respectively per 6-credit course.\n\n"

        "* Subject to University approval\n\n"

        "Fees for enrolled courses are paid on semester basis.  The first instalment of composition fees of 12 credit-units is payable at the time of acceptance of an offer of admission.\n\n"

        "Generally composition fees for cancelled enrolment before specified deadline are not refunded, but can be used to pay for another enrolled course or carried over to the next semester as credit. (Subject to the approval by the University)"
    </string>
    <string name="Financial_Assistance">
        "For Hong Kong Residents\n\n"

        "   Continuing Education Fund (CEF)Some of our courses have been included in the list of reimbursable courses for the Hong Kong Continuing Education Fund (CEF) which provides reimbursement up to HK$10,000 for eligible local students.  More details available at: http://www.wfsfaa.gov.hk/cef/index.htm\n\n"

        "For PRC Candidates\n\n"

        "   PRC students who have successfully applied and been offered a place in the Master of Science in Computer Science as full-time students in Hong Kong have an opportunity to have their composition fees reduced if they apply and are awarded The China Postgraduate Scholarships for Computer Science.\n\n"

        "   The maximum number of scholarships for 2019-20 is thirty, with a maximum value of HK$30,000 each.\n\n"

        "   The scholarships shall be used to meet part of the composition fees for a full-time programme of studies leading to the degree of Master of Science in Computer Science.\n\n"

        "   The scholarships shall be awarded mainly on the basis of academic merits."
    </string>
    <string name="view_overview_second_cyber">
        "The Cyber Security Stream is a multidisciplinary area of study and professional activity concerned with state-of-the-art technology in cyber security. The curriculum covers different aspects of cyber security from different perspectives, including technical, organisational, human-oriented and legal."
    </string>
    <string name="view_overview_second_multimedia">
        "The Multimedia Computing Stream focuses on multimedia computing, communications, analytics, visualisation and applications.\n\n"

        "Multimedia Computing encompasses media coding and processing, streaming-media middleware, media representations, real-time protocols, media analysis, and human-interaction and visualisation techniques.\n\n"

        "Students are encouraged to develop innovative ideas using the latest development in technology such as mobile devices and big-data analytics."
    </string>
    <string name="view_overview_second_financial">
        "The Financial Computing Stream is the study of data and algorithms used in finance and the mathematics of computer programs that realise financial models or systems.\n\n"

        "Financial Computing emphasises practical numerical methods and focuses on techniques that are directly applicable to business and financial analysis.\n\n"

        "The emphasis will be in the computing aspect of the financial industry."
    </string>
    <string name="view_overview_second_general">
        "The General Stream covers a broad, comprehensive range of Computer Science subjects, including a wide range of courses from which students can choose from. It offers students the most flexibility to design their own study portfolio based on their career aspiration or requirements."
    </string>
    <string name="view_overview_second_pattern">
        "Students are required to complete 72 credits, of which 48 credits from courses (equivalent to eight 6-credit courses) plus a dissertation (equivalent to 24 credits). \n\n\n\n"
    </string>
    <string name="cardview_test_title">
        "Graduation Dinner 2017"
    </string>
    <string name="cardview_test_time">
        "Friday, December 1, 2017"
    </string>
    <string name="cardview_test_des">
        "Graduates of Class 2017 of the MSc(CompSc) programme celebrated and shared their joy of achievement …"
    </string>
    <string name="cardview_test_event_title">
        "Post Exhibition of MSc(CompSc) Dissertations - Spring 2018 (March 27)"
    </string>
    <string name="cardview_test_event_des">
        "Every semester, a poster exhbition is held to showcase the work of our MSc(CompSc) students on&#160;…"
    </string>
    <string name="cardview_test_event_loaction">
        "3/F, The Jockey Club Tower, Central Podium Level, HKU"
    </string>
</resources>